python/test-data/testGetSource.err
Traceback (most recent call last):
  File "test-data/testGetSource.py", line 11, in <module>
    Art = Literal('klein','mittag')  # <= problem is here
untypy.error.WyppTypeError: Cannot call Literal like a function. Did you mean Literal['klein', 'mittag']?
